crates/service/tests/completion/snapshots/features__completion__func_type__call_indirect_incomplete_ident.snap
---
source: crates/service/tests/completion/func_type.rs
expression: response
---
[
  {
    "label": "$a",
    "labelDetails": {
      "detail": "(struct)"
    },
    "kind": 8,
    "sortText": "1",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "newText": "$a"
    }
  },
  {
    "label": "$b",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 5,
          "character": 20
        },
        "end": {
          "line": 5,
          "character": 22
        }
      },
      "newText": "$b"
    }
  }
]
