crates/service/tests/completion/snapshots/features__completion__func_type__func_types_following_dollar.snap
---
source: crates/service/tests/completion/func_type.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$type",
    "kind": 8,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "newText": "$type"
    }
  }
]
