crates/service/tests/completion/snapshots/features__completion__func_type__func_types_following_int_idx.snap
---
source: crates/service/tests/completion/func_type.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "$type",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "sortText": "0",
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 16
        },
        "end": {
          "line": 2,
          "character": 17
        }
      },
      "newText": "$type"
    }
  }
]
